создание и удаление заявок на товары
